--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -133,10 +133,25 @@
     <Compile Include="Models\Division.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Draft.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Franchise.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Game.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Game_Player_FG_Defense_Stats.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Game_Player_Kicker_Stats.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Game_Player_Kickoff_Defenders.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Game_Player_Kickoff_Receiver_Stats.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Game_Player_Kick_Returner_Stats.cs">
@@ -154,7 +169,22 @@
     <Compile Include="Models\Game_Player_Pass_Rushers_Stats.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Game_Player_Penalties_Stats.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Game_Player_Penalty_Stats.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Game_Player_Punter_Stats.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Game_Player_Punt_Defenders.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Game_Player_Punt_Receiver_Stats.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Game_Player_Punt_Returner_Stats.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Game_Player_Receiving_Stats.cs">
@@ -163,19 +193,13 @@
     <Compile Include="Models\Game_Player_Rushing_Stats.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Game_Player_Special_Teams_Has_Ball_Stats.cs">
-      <DependentUpon>LeagueEDM.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Game_Player_Special_Team_Receive_Stats.cs">
-      <DependentUpon>LeagueEDM.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\Game_Scoring_Summary.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Hall_of_Fame.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\League.cs">
+    <Compile Include="Models\Injury.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\LeagueEDM.Context.cs">
@@ -193,13 +217,22 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>LeagueEDM.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\League_Structure_by_Season.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Penalty.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Player.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Player_Awards.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Playoff_Teams.cs">
+    <Compile Include="Models\Player_Ratings.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Playoff_Teams_by_Season.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Potential_First_Names.cs">
@@ -207,6 +240,9 @@
     </Compile>
     <Compile Include="Models\Potential_Last_Names.cs">
       <DependentUpon>SettingsEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Season.cs">
+      <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SettingsEDM.Context.cs">
       <AutoGen>True</AutoGen>
@@ -226,7 +262,7 @@
     <Compile Include="Models\Stock_Teams.cs">
       <DependentUpon>SettingsEDM.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Team.cs">
+    <Compile Include="Models\Teams_by_Season.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="NewLeagueUC.xaml.cs">
